Fixed spacing and scaling issues

--- a/src/App.css
+++ b/src/App.css
@@ -159,7 +159,7 @@ body {
 h1 {
   margin: 0;
   color: var(--font-colour);
-  font-size: min(60px, 12vw);
+  font-size: min(60px, 12vw, 9vh);
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 200;
 }
